--- a/index.html
+++ b/index.html
@@ -12,53 +12,50 @@
 </head>
 <body>
     <header>
-        <h1>Defarhan Nugraha Fadhali</h1>
-        <p>Web Developer | Designer</p>
-    </header>
-
-    <main>
+        <h1>Defarhan Nugraha</h1>
+        <p>Web Developer | Designer | Dreamer</p>
+      </header>
+      <main>
         <section id="about">
-            <h2>About Me</h2>
-            <p>Hello! I'm passionate about web development and design. I love building websites and creating beautiful user experiences. In my free time, you'll find me dreaming about new project ideas.</p>
+          <h2>About Me</h2>
+          <p>
+            Hello! I'm passionate about web development and design. I love building websites and creating beautiful user experiences. In my free time, you'll find me dreaming about new project ideas.
+          </p>
         </section>
         <section id="skills">
-            <h2>Skills</h2>
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>UI/UX Design</li>
-            </ul>
+          <h2>Skills</h2>
+          <ul>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>JavaScript</li>
+            <li>React</li>
+            <li>UI/UX Design</li>
+          </ul>
         </section>
-    </main>
-    <aside>
-        <section id="contact">
+        <aside>
+          <section id="contact">
             <h2>Contact Me</h2>
             <p>Email: defarhannugraha1@gmail.com</p>
-            <p>Instagram: <a href="https://www.instagram.com/defanugraha_/" target="_blank">defanugraha_</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/defarhan-nugraha-fadhali-769001222/" target="_blank">Defarhan Nugraha Fadhali</a></p>
-        </section>
-        <section id="photo-slider">
+            <p>Phone: +62 812-3106-8917</p>
+          </section>
+          <section id="photo">
             <h2>My Photo</h2>
-            <div class="slider-container">
-                <img src="img/defa masker.PNG" alt="defa masker">
-                <img src="img/defa candi.PNG" alt="defa candi">
-                <img src="img/defa1.jpeg" alt="defa1">
-            </div>
-        </section>
-        <section id="social">
+            <img src="img/defa candi.PNG" alt="Defa">
+          </section>
+          <section id="social">
             <h2>Follow Me</h2>
             <div>
-                <a href="https://www.linkedin.com/in/defarhan-nugraha-fadhali-769001222/"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://twitter.com/defanugraha"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.instagram.com/defanugraha_/"><i class="fab fa-instagram"></i></a>
+              <a href="https://www.facebook.com/defarhannugraha.widowati/" target="_blank"><img src="img/facebook-icon.png" alt="Facebook"></a>
+              <a href="https://twitter.com/defanugraha" target="_blank"><img src="img/twitter-icon.png" alt="Twitter"></a>
+              <a href="https://www.linkedin.com/in/defarhan-nugraha-fadhali-769001222/" target="_blank"><img src="img/linkedin-icon.png" alt="LinkedIn"></a>
+              <a href="https://github.com/deFare00" target="_blank"><img src="img/github-icon.png" alt="GitHub"></a>
             </div>
-        </section>
-    </aside>
-    <footer>
-        <p>&copy; 2023 Defarhan Nugraha Fadhali. All Rights Reserved.</p>
-    </footer>
+          </section>
+        </aside>
+      </main>
+      <footer>
+        <p>&copy; 2023 Defarhan Nugraha Fadhali. All rights reserved.</p>
+      </footer>
 
-    <script src="script.js"></script>
 </body>
 </html>
