--- a/index.html
+++ b/index.html
@@ -3,59 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Defarhan Nugraha Profile</title>
+    <title>Profile Page</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 <body>
     <header>
-        <h1>Defarhan Nugraha</h1>
-        <p>Web Developer | Designer | Dreamer</p>
-      </header>
-      <main>
-        <section id="about">
-          <h2>About Me</h2>
-          <p>
-            Hello! I'm passionate about web development and design. I love building websites and creating beautiful user experiences. In my free time, you'll find me dreaming about new project ideas.
-          </p>
-        </section>
-        <section id="skills">
-          <h2>Skills</h2>
-          <ul>
-            <li>HTML5</li>
-            <li>CSS3</li>
-            <li>JavaScript</li>
-            <li>React</li>
-            <li>UI/UX Design</li>
-          </ul>
-        </section>
-        <aside>
-          <section id="contact">
-            <h2>Contact Me</h2>
-            <p>Email: defarhannugraha1@gmail.com</p>
-            <p>Phone: +62 812-3106-8917</p>
-          </section>
-          <section id="photo">
-            <h2>My Photo</h2>
-            <img src="img/defa candi.PNG" alt="Defa">
-          </section>
-          <section id="social">
-            <h2>Follow Me</h2>
-            <div>
-              <a href="https://www.facebook.com/defarhannugraha.widowati/" target="_blank"><img src="img/facebook-icon.png" alt="Facebook"></a>
-              <a href="https://twitter.com/defanugraha" target="_blank"><img src="img/twitter-icon.png" alt="Twitter"></a>
-              <a href="https://www.linkedin.com/in/defarhan-nugraha-fadhali-769001222/" target="_blank"><img src="img/linkedin-icon.png" alt="LinkedIn"></a>
-              <a href="https://github.com/deFare00" target="_blank"><img src="img/github-icon.png" alt="GitHub"></a>
-            </div>
-          </section>
-        </aside>
-      </main>
-      <footer>
-        <p>&copy; 2023 Defarhan Nugraha Fadhali. All rights reserved.</p>
-      </footer>
+        <h1>Defarhan Nugraha Fadhali</h1>
+        <p>Welcome to my profile page!</p>
+    </header>
 
+    <main>
+        <aside>
+          <img src="img/defa masker.PNG" alt="defa">
+            <h2>About Me</h2>
+            <p>
+                Hi there! I'm Defarhan Nugraha Fadhali, a web developer with a passion for creating responsive and user-friendly websites.
+                I love exploring new technologies and building exciting projects.
+            </p>
+        </aside>
+
+        <article>
+            <h2>Recent Projects</h2>
+            <div class="slider-container">
+                <div class="slider">
+                    <img src="img/project1.jpeg" alt="Image 1">
+                    <img src="img/project2.jpeg" alt="Image 2">
+                    <img src="img/project3.jpeg" alt="Image 3">
+                </div>
+            </div>
+        </article>
+    </main>
+
+    <footer>
+        <p>Contact: defarhannugraha1@gmail.com | Phone: (+62) 812-31068917</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
